<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.devsaki.myappportafolio.PortafolioActivity"
    tools:showIn="@layout/activity_portafolio"
    android:background="#c2e6f7">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/title_content_portafolio"
                android:id="@+id/tv_title_content_portafolio"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center_horizontal"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/tv_title_content_portafolio"
                android:padding="10dp">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_project_1"
                    android:id="@+id/btn_project_1"
                    android:onClick="goToProject1"
                    android:layout_margin="10dp"
                    android:background="#ed9b1f" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_project_2"
                    android:id="@+id/btn_project_2"
                    android:onClick="goToProject2"
                    android:layout_margin="10dp"
                    android:background="#ed9b1f"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_project_3"
                    android:id="@+id/btn_project_3"
                    android:onClick="goToProject3"
                    android:layout_margin="10dp"
                    android:background="#ed9b1f" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_project_4"
                    android:id="@+id/btn_project_4"
                    android:onClick="goToProject4"
                    android:layout_margin="10dp"
                    android:background="#ed9b1f" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_project_5"
                    android:id="@+id/btn_project_5"
                    android:onClick="goToProject5"
                    android:layout_margin="10dp"
                    android:background="#ed9b1f" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_project_6"
                    android:id="@+id/btn_project_6"
                    android:onClick="goToProject6"
                    android:layout_margin="10dp"
                    android:background="#f50f0f"
                    android:textColor="#ffffff" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
